--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,6 +1,6 @@
 :root{
     --text:#162345;
-    --hover: #a65656;
+    --hover: #009688;
     --hover2: #0032eaa6;
     --wshaddow: #fff;
     --dark-shaddow: #aaa;
